fixed spacing of layout and elements, added and modified more bootstrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,3 +16,26 @@
 body {
     background-image: url("cool-background.png");
 }
+
+.portfolio {
+    margin-top: 25px;
+    margin-left: 80px;
+}
+
+
+.contact {
+    margin-left: 100px;
+}
+
+.form-group {
+    padding-left: 100px;
+    
+}
+
+.btn{
+    margin-left: 100px;
+}
+
+.form-group {
+    padding-right: 25px;
+}
